ccip update config api (#2440)
* update api

* update api

* update api

* update api
