# public/api/ccip/v1/openapi.json
@@ -112,7 +112,8 @@
                         "router": "0x80226fc0Ee2b096224EeAc085Bb9a8cba1146f7D",
                         "rmn": "0x411dE17f12D1A34ecC7F45f49844626267c75e81",
                         "registryModule": "0x13022e3e6C77524308BD56AEd716E88311b2E533",
-                        "tokenAdminRegistry": "0xb22764f98dD05c789929716D677382Df22C05Cb6"
+                        "tokenAdminRegistry": "0xb22764f98dD05c789929716D677382Df22C05Cb6",
+                        "tokenPoolFactory": "0x17D8a409fE2ceF2d3808bcB61F14aBEFfc28876e"
                       }
                     }
                   },
@@ -234,6 +235,11 @@
             "type": "string",
             "pattern": "^0x[a-fA-F0-9]{40}$",
             "description": "Token Admin Registry contract address"
+          },
+          "tokenPoolFactory": {
+            "type": "string",
+            "pattern": "^0x[a-fA-F0-9]{40}$",
+            "description": "Token Pool Factory contract address"
           }
         }
       },
